# sentinel

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  SECURITY.md  SKILLS.md  codama.json  fix_layout.py  vercel.json
.github/: copilot-instructions.md
crates/seal-core/: Cargo.toml
crates/seal-core/src/: crypto.rs  keyvault.rs  lib.rs  signer.rs  types.rs
crates/sentinel-core/: Cargo.toml
crates/sentinel-core/src/: lib.rs  policy.rs  types.rs
docs/: .gitignore  index.md  package-lock.json  package.json  vercel.json
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css  index.ts
docs/api/: constants.md  instructions.md  pda-derivation.md  typescript-sdk.md
docs/components/: Features.vue  Hero.vue  McpInstallButtons.vue  RiveRobot.vue
docs/concepts/: account-model.md  architecture.md  security-model.md  session-keys.md
docs/de/: index.md
docs/es/: index.md
docs/fr/: index.md
docs/guide/: getting-started.md  installation.md  quick-start.md
docs/integrations/: cursor.md  mcp.md  openclaw.md  sigil.md  vscode.md
docs/ja/: index.md
docs/ko/: index.md
docs/pt-BR/: index.md
docs/public/: seal-wallet-skill.md
docs/ru/: index.md
docs/zh-CN/: index.md
programs/seal-wallet/: Cargo.toml
programs/seal-wallet/src/: entrypoint.rs  error.rs  lib.rs  processor.rs  utils.rs
programs/seal-wallet/src/instructions/: add_guardian.rs  close_wallet.rs  create_session.rs  create_wallet.rs  deregister_agent.rs  execute_via_session.rs  lock_wallet.rs  mod.rs  recover_wallet.rs  register_agent.rs  remove_guardian.rs  revoke_session.rs  set_recovery_threshold.rs  transfer_lamports.rs  update_spending_limit.rs
programs/seal-wallet/src/state/: agent_config.rs  mod.rs  smart_wallet.rs  tests.rs
programs/sentinel-wallet/: Cargo.toml
programs/sentinel-wallet/src/: error.rs  lib.rs  processor.rs  utils.rs
programs/sentinel-wallet/src/instructions/: add_guardian.rs  close_wallet.rs  create_session.rs  create_wallet.rs  deregister_agent.rs  (+6 more)
sdk/seal-dart/: pubspec.yaml
sdk/seal-dart/lib/: sentinel_dart.dart
sdk/seal-ts/: README.md  package-lock.json  package.json  typedoc.json
sdk/seal-ts/scripts/: devnet-test.ts
sdk/seal-ts/src/: accounts.ts  client.ts  constants.ts  index.ts  instructions.ts  pda.ts  types.ts
sdk/sentinel-dart/: .flutter-plugins-dependencies  pubspec.yaml
sdk/sentinel-dart/lib/: sentinel_dart.dart
sdk/sentinel-ts/: README.md  package-lock.json  package.json  tsconfig.json  typedoc.json
sdk/sentinel-ts/scripts/: devnet-test.ts
sdk/sentinel-ts/src/: accounts.ts  client.ts  constants.ts  index.ts  instructions.ts  pda.ts
templates/express-api/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
templates/express-api/src/: config.ts  index.ts
tests/: devnet-integration.test.ts  package-lock.json  package.json  seal-wallet.test.ts  sentinel-wallet.test.ts  vitest.config.ts
(+29 files in other folders)
